--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,6 @@
 <resources>
     <string name="app_name">Bulksend test</string>
-    <string name="accessibility_service_description">bulksendtest</string>
+    <string name="accessibility_service_description">This service enables two features:\n\n1. Auto-send messages in WhatsApp campaigns\n2. Extract unsaved contact numbers from WhatsApp\n\nAll data stays on your device. No information is sent to any server.</string>
 
     <!-- Web Client ID for Google Sign-In -->
     <string name="default_web_client_id">148146046101-9ccenbp3dnr5fctncv8hfq9os9jvtbak.apps.googleusercontent.com</string>
